fix: fixed text align for contacts mobile

--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -15,6 +15,7 @@
 }
 
 .contacts__text {
+    text-align: center;
     font-weight: 400;
     font-size: $textLowSize;
     margin: 0px 20px 20px 20px;
