--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -38,6 +38,7 @@
 }
 
 .header__menu__link {
+    text-align: center;
     padding: 10px;
     color: black;
     text-decoration: none;
