--- a/src/components/projectsHolder/projectsHolder.scss
+++ b/src/components/projectsHolder/projectsHolder.scss
@@ -15,6 +15,7 @@
 }
 
 .projects-holder__subtitle {
+    text-align: center;
     font-size: $textMiddleSize;
     font-weight: 400;
 }
